Bug 121287 - Legacy callout has wrong handles in tail, cannot size it
Summary: Legacy callout has wrong handles in tail, cannot size it
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha1+
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Regina Henschel
URL:
Whiteboard: target:6.2.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2018-11-08 17:22 UTC by Regina Henschel
Modified: 2018-11-10 12:09 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
screenshot of callout (7.40 KB, image/png)
2018-11-08 17:22 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2018-11-08 17:22:35 UTC
Created attachment 146456 [details]
screenshot of callout

Open Draw and draw a legacy Callout, that one from the toolbar "Text", not the custom shape.

Notice, that the "elbow" of the tail has got a marker too, although it is not drag able.

Notice, that you cannot size the callout, where the tail meets the rectangle. That is because there is a marker of the tail on top of the marker of the rectangle.

All points of the tail have got markers, but only the end of the tail should have one.

[Using the Position&Size dialog to change the kind of callout will crash. I'm going to write a separate issue for that. If I fix this issue, LibreOffice will still crash, thus the crash is a different problem.]
Comment 1 Regina Henschel 2018-11-08 17:41:11 UTC
Proposed patch is in https://gerrit.libreoffice.org/#/c/63120/
Comment 2 Commit Notification 2018-11-10 11:59:56 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/a35e7f38942ca3cc3b277692fae86d0787db934a%5E%21

tdf#121287 Use correct markers on tail of legacy callout

It will be available in 6.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.