tdf#121287 Use correct markers on tail of legacy callout

A legacy callout from toolbar 'Text', not a custom shape, is a
rectangle with an additional tail. Currently only the end of
the tail is dragable. The error was, that all points of the tail
had got markers and that the markers had got a wrong point reference.

Change-Id: I900b1294aaeefc0f46547c6db009a3c750955460
Reviewed-on: https://gerrit.libreoffice.org/63120
Tested-by: Jenkins
Reviewed-by: Regina Henschel <rb.henschel@t-online.de>